<resources>
    <string name="app_name">PictoriousV2</string>


    <!--Home Feed Strings -->
    <string name="add">Add Value</string>
    <string name="listview">List View</string>
    <string name="recyclerview">Recycler View</string>
    <string name="add_random">Random Add</string>
    <string name="start_delete">Start Deletion</string>
    <string name="delete">Delete</string>

    <!--Login View Strings-->
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Log_In">Log In</string>
    <string name="Register_New_Account">Register a New Account</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Log_in_to_Your_Account">Log in to Your Account</string>

    <!--menu drawer strings-->
    <string name="Messages">Messages</string>
    <string name="Talk_to_Us">Talk To Us</string>
    <string name="Profile">Profile</string>
    <string name="Explore">Explore</string>
    <string name="Settings">Settings</string>
    <string name="FAQ">FAQ</string>
    <string name="Connect_On_Facebook">Connect On Facebook</string>
    <string name="Connect_On_Twitter">Connect On Twitter</string>
    <string name="Terms_Of_Service">Terms Of Service</string>
    <string name="Contest_Rules">Contest Rules</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Welcome_Screen">Welcome Screen</string>
    <string name="Signout">Signout</string>

    <!-- Strings Home View-->
    <string name="Post_Photo_Video">Post Photo/Video</string>
    <string name="Create_Challenge">Create Challenge</string>
    <string name="Brand_Feed">Brand Feed</string>
    <string name="Brand_Challenge">Brand Challenge</string>

    <!--Alert Mesages-->
    <string name="email_blank">Email field can\'t be blank.</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="password_match">Password doesn\'t match.</string>
    <string name="username_blank">Username field can\'t be blank</string>
    <string name="password_blank">Password field can\'t be blank</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_camera">Camera</string>

</resources>
