<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray0">

    <include layout="@layout/toolbar_login" />


    <ImageView
        android:id="@+id/imgvwLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutLoginInfo"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher_round" />


    <RelativeLayout
        android:id="@+id/layoutLoginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:paddingBottom="1dp">

        <View
            android:id="@+id/v00"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray1"/>

        <RelativeLayout
            android:id="@+id/layoutInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_below="@+id/v00"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/message_icon"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="text" />
            <!--android:text="Rouesatyr@gmail.com / pictorious"-->
            <View
                android:id="@+id/v0"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/edtEmail"
                android:background="@color/colorGray1" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/v0"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="10dp"
                android:hint="@string/Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
            <!--android:text="  / 1qazxsw2!QAZXSW@"-->
        </RelativeLayout>

        <View
            android:id="@+id/v01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layoutInput"
            android:background="@color/colorGray1"/>
        <RelativeLayout
            android:id="@+id/layouCPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/v01"
            android:background="@color/colorGray0">

            <RelativeLayout
                android:id="@+id/layoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone">

                <View
                    android:id="@+id/v1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray1" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/v1"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/Confirm_Password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />


            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/v02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_below="@+id/layoutLoginInfo"
        android:background="@color/colorGray1"/>


    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/v02"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_green_solid"
        android:inputType="text"
        android:text="@string/Log_In"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_14" />

    <Button
        android:id="@+id/btnRegisterNewAccount"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/btnLogIn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_green_border"
        android:inputType="text"
        android:text="@string/Register_New_Account"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_14" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>